# xcdat-trie

./: README.md  meson.build
.github/workflows/: build.yml  cmake.yml
include/xcdat/: trie.hpp
pybind/: meson.build
sample/: meson.build
tests/: meson.build  test_common.hpp  test_trie.cpp
tools/: meson.build
